--- a/index.html
+++ b/index.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
-<html>
-<HEAD>
-    <title>Todo App</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
-<link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
-</HEAD>
-<body class="body">
-<div class="header">
-    <img class="image" src="./eisenhower-matrix.jpg">
-    <a class='more-inf' 
-    href="https://goal-life.com/page/method/matrix-eisenhower">
-    Want more details?
-</a>
-</div>
-<div class="main-container">
-    <p id='add-item'><label for="new-task" class="label-new-task">Add Item</label>
-        <div class="row-add-task">
+  <html>
+    <HEAD>
+      <title>Todo App</title>
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
+        <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
+    </HEAD>
+    <body class="body">
+      <div class="header">
+        <img class="image" src="./eisenhower-matrix.jpg">
+          <a class='more-inf' 
+          href="https://goal-life.com/page/method/matrix-eisenhower">
+          Want more details?
+          </a>
+      </div>
+      <div class="main-container">
+        <p id='add-item'><label for="new-task" class="label-new-task">Add Item</label>
+          <div class="row-add-task">
             <input id='new-task'class="task" type="text">
             <button class="button">Add</button>
         </div>
-</p>
-<h3>Todo</h3>
-<ul id='incomplete-tasks'>
-<li class="task-item li">
-    <input type='checkbox' class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task"><button class="edit button">
-        
-    </button><button class="delete button"><img src="./remove.svg"></button></li>
-<li class="edit-mode li">
-    <input type="checkbox" class="checkbox"><label class="label-task">Go Shopping</label>
-    <input type="text" value="Go Shopping" class="input-task">
-    <button class='edit button'>Save</button>
-    <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
-</li>
-</ul>
-<h3 class="h3">Completed</h3>
-<ul id="completed-tasks">
-    <li class="li">
-        <input type="checkbox" class="checkbox" checked><label class="label-task">See the Doctor</label>
-        <input type="text" class="input-task">
-        <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
-</li>
-</ul>
-</div>
-<script SRC="app.js"></script>
-</body>
+        </p>
+        <h3>Todo</h3>
+        <ul id='incomplete-tasks'>
+          <li class="task-item li">
+            <input type='checkbox' class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task">
+            <button class="edit button"></button>
+            <button class="delete button"><img src="./remove.svg"></button>
+          </li>
+          <li class="edit-mode li">
+           <input type="checkbox" class="checkbox"><label class="label-task">Go Shopping</label>
+           <input type="text" value="Go Shopping" class="input-task">
+           <button class='edit button'>Save</button>
+           <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
+          </li>
+        </ul>
+        <h3 class="h3">Completed</h3>
+        <ul id="completed-tasks">
+          <li class="li">
+            <input type="checkbox" class="checkbox" checked><label class="label-task">See the Doctor</label>
+            <input type="text" class="input-task">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
+          </li>
+        </ul>
+      </div>
+      <script SRC="app.js"></script>
+    </body>
 </html>
