--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>Todo App</title>
-        <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
         <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
     </head>
     <body class="body">
@@ -21,16 +21,16 @@
         </div>
         </p>
         <h3>Todo</h3>
-        <ul id='incomplete-tasks'>
+        <ul id="incomplete-tasks">
           <li class="task-item li">
-            <input type='checkbox' class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task">
+            <input type="checkbox" class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task">
             <button class="edit button"></button>
             <button class="delete button"><img src="./remove.svg"></button>
           </li>
           <li class="edit-mode li">
            <input type="checkbox" class="checkbox"><label class="label-task">Go Shopping</label>
            <input type="text" value="Go Shopping" class="input-task">
-           <button class='edit button'>Save</button>
+           <button class="edit button">Save</button>
            <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
           </li>
         </ul>
