--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body class="body">
       <header class="header">
-        <img class="image" src="./eisenhower-matrix.jpg">
+        <img class="image" src="./eisenhower-matrix.jpg" alt="matrix">
           <a class='more-inf' 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
@@ -26,13 +26,13 @@
               <li class="task-item li">
                 <input type="checkbox" class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task">
                 <button class="edit button"></button>
-                <button class="delete button"><img src="./remove.svg"></button>
+                <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
               </li>
               <li class="edit-mode li">
                <input type="checkbox" class="checkbox"><label class="label-task">Go Shopping</label>
                <input type="text" value="Go Shopping" class="input-task">
                <button class="edit button">Save</button>
-               <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
+               <button class="delete button"><img src="./remove.svg" class="img-delete" alt="remove-button"></button>
               </li>
             </ul>
         </section>
@@ -43,7 +43,7 @@
             <input type="checkbox" class="checkbox" checked><label class="label-task">See the Doctor</label>
             <input type="text" class="input-task">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" class="img-delete"></button>
+            <button class="delete button"><img src="./remove.svg" class="img-delete" alt="remove-button"></button>
             </li>
           </ul>
         </section>
