--- a/index.html
+++ b/index.html
@@ -14,22 +14,26 @@
           </a>
       </header>
       <main class="main-container">
-        <section class="block"><label for="new-task" class="label-new-task">Add Item</label>
+        <section class="block">
+            <label for="new-task" class="label-new-task">Add Item</label>
           <div class="row-add-task">
-            <input id='new-task'class="task" type="text">
+            <input id="new-task"class="task" type="text">
             <button class="button">Add</button>
         </div>
         </section>
         <section class="block">
             <h3 class="block__title">Todo</h3>
             <ul id="incomplete-tasks" class="block__incompleted">
-              <li class="block__task-item li">
-                <input type="checkbox" class="checkbox"><label class="task">Pay Bills</label><input type="text" class="input-task">
-                <button class="button__edit button"></button>
+              <li class="li">
+                <input type="checkbox" class="checkbox">
+                <label class="label-task">Pay Bills</label>
+                <input type="text" class="input-task">
+                <button class="button__edit button">Edit</button>
                 <button class="button__delete button"><img src="./remove.svg" alt="remove-button"></button>
               </li>
               <li class="edit-mode li">
-               <input type="checkbox" class="checkbox"><label class="label-task">Go Shopping</label>
+               <input type="checkbox" class="checkbox">
+               <label class="label-task">Go Shopping</label>
                <input type="text" value="Go Shopping" class="input-task">
                <button class="button__edit button">Save</button>
                <button class="button__delete button"><img src="./remove.svg" class="img-delete" alt="remove-button"></button>
@@ -40,7 +44,8 @@
           <h3 class="block__title">Completed</h3>
           <ul id="completed-tasks">
             <li class="li">
-            <input type="checkbox" class="checkbox" checked><label class="label-task">See the Doctor</label>
+            <input type="checkbox" class="checkbox" checked>
+            <label class="label-task">See the Doctor</label>
             <input type="text" class="input-task">
             <button class="button__edit button">Edit</button>
             <button class="button__delete button"><img src="./remove.svg" class="img-delete" alt="remove-button"></button>
